mod1-pcm-service/src/main/kubernetes/35-mod1-pcm-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mod1-pcm-service
  labels:
    app.kubernetes.io/name: mod1-pcm-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '9090'
    prometheus.io/path:   '/manage/prometheus'
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 8092
    - name: healthz
      port: 9090
  selector:
    app.kubernetes.io/name: mod1-pcm-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mod1-pcm-service
  labels:
    app.kubernetes.io/name: mod1-pcm-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mod1-pcm-service
  template:
    metadata:
      labels:
        app.elastic.logs.json: enable
        app.kubernetes.io/name: mod1-pcm-service
        blinktShow: 'true'
        blinktColor: "FFFF00"
    spec:
      containers:
        - name: mod1-pcm-service
          image: yggdrasill.tld/mod1-pcm-service
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8092
            - name: healthz
              containerPort: 9090
#          readinessProbe:
#            httpGet:
#              path: /manage/health/readiness
#              port: healthz
#            initialDelaySeconds: 300
#            timeoutSeconds: 10
#            periodSeconds: 3
#            failureThreshold: 5
#          livenessProbe:
#            httpGet:
#              path: /manage/health/liveness
#              port: healthz
#            initialDelaySeconds: 180
#            timeoutSeconds: 10
#            periodSeconds: 8
#            failureThreshold: 1
          resources:
#            limits:
#              cpu: 1500m
#              memory: 500Mi
            requests:
              cpu: 50m
              memory: 150Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
#           volumeMounts:
#             - name: keystore-volume
#               mountPath: /app/keystores
#      initContainers:
#        - name: pem-to-truststore
#          image: yggdrasill.tld/department-service
#          env:
#            - name: cafile
#              value: /var/run/secrets/vault/ca.pem
#            - name: crtfile
#              value: /var/run/secrets/vault/vault.pem
#            - name: truststore_jks
#              value: /var/run/secrets/java.io/keystores/truststore.jks
#            - name: password
#              value: changeit
#          command: ['/bin/bash']
#          args: ['-c', "keytool -importcert -noprompt -alias vault -file $cafile -keystore $truststore_jks -storepass $password; ls -lsa /var/run/secrets/java.io/keystores"]
#          volumeMounts:
#            - name: keystore-volume
#              mountPath: /var/run/secrets/java.io/keystores
#            - name: vault-tls
#              mountPath: /var/run/secrets/vault/
#        - name: validate-truststore
#          image: yggdrasill.tld/department-service
#          env:
#            - name: truststore_jks
#              value: /var/run/secrets/java.io/keystores/truststore.jks
#            - name: password
#              value: changeit
#          command: ['/bin/bash']
#          args: ['-c', "keytool -list -keystore $truststore_jks -storepass $password"]
#          volumeMounts:
#            - name: keystore-volume
#              mountPath: /var/run/secrets/java.io/keystores
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
#      volumes:
#        - name: keystore-volume
#          emptyDir: {}
#        - name: vault-tls
#          secret:
#            secretName: vault-tls-cert
